<resources>
    <string name="app_name">BWA Mov</string>
    <string name="lewati_perkenalan">Lewati Perkenalan</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="now_playing">Now Playing</string>
    <string name="now_playing_desc">Lebih mudah untuk mengetahui\nFilm yang sedang tayang</string>
    <string name="pre_sale_ticket">Pre Sale Ticket</string>
    <string name="pre_sale_desc">Tidak Perlu Khawatir Tertinggal\nUpdate Film Terbaru</string>
    <string name="cashless">Cashless</string>
    <string name="cashless_desc">Gunakan e-wallet Sebagai\nMedia Transaksi</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="photo">Photo</string>
    <string name="upload_later">Upload Later</string>
    <string name="save_and_continue">Save and Continue</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="storyboard">Storyboard</string>
    <string name="who_s_played">Who\'s Played</string>
    <string name="choose_seat">Choose Seat</string>
    <string name="movie_screen">Movie Screen</string>
    <string name="buy_ticket">Buy Ticket</string>
    <string name="booked">Booked</string>
    <string name="empty">Empty</string>
    <string name="selected">Selected</string>
    <string name="cancel">Cancel</string>
    <string name="checkout">Checkout</string>
    <string name="when">When</string>
    <string name="pay_now">Pay Now</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="cinema">Cinema</string>
    <string name="items">Items</string>
    <string name="e_wallet">E-Wallet</string>
    <string name="total_balance">Total Balance</string>
    <string name="save_new_data">Save New Data</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_wallet">My Wallet</string>
    <string name="current_balance">Current Balance</string>
    <string name="list_of_transactions">List of Transactions</string>
    <string name="history">History</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rate">Rate</string>
    <string name="home">Home</string>
    <string name="ticket">Ticket</string>
    <string name="happy_watching">Happy Watching</string>
    <string name="todays">Todays</string>
    <string name="date_and_time">Date and Time</string>
    <string name="title">Title</string>
    <string name="settings">Settings</string>
</resources>